--- a/BibliotecaImpressaoEscPos/EscPosPrinter.csproj
+++ b/BibliotecaImpressaoEscPos/EscPosPrinter.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Builder\Command.cs" />
     <Compile Include="Builder\Transpilator.cs" />
     <Compile Include="Builder\XmlLoader.cs" />
+    <Compile Include="Interpreter.cs" />
     <Compile Include="IPrinter.cs" />
     <Compile Include="PortFactory\Enums\BarcodeType.cs" />
     <Compile Include="PortFactory\Enums\PrintingStyle.cs" />
