--- a/EscPosPrinter/EscPosPrinter.csproj
+++ b/EscPosPrinter/EscPosPrinter.csproj
@@ -106,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Builder\Command.cs" />
+    <Compile Include="Builder\Timedout.cs" />
     <Compile Include="Builder\Transpilator.cs" />
     <Compile Include="Builder\XmlLoader.cs" />
     <Compile Include="IInterpreter.cs" />
