--- a/EscPosPrinter.Console/EscPosPrinter.Console.csproj
+++ b/EscPosPrinter.Console/EscPosPrinter.Console.csproj
@@ -110,6 +110,9 @@
       <Name>EscPosPrinter</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="images\pmenos.bmp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
