--- a/EscPosPrinter.Tests/EscPosPrinter.Tests.csproj
+++ b/EscPosPrinter.Tests/EscPosPrinter.Tests.csproj
@@ -79,6 +79,7 @@
       <Name>EscPosPrinter</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
