--- a/EscPosPrinter/EscPosPrinter.csproj
+++ b/EscPosPrinter/EscPosPrinter.csproj
@@ -44,6 +44,14 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>EscPosPrinter.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <PlatformTarget>x86</PlatformTarget>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <PlatformTarget>x86</PlatformTarget>
+    <OutputPath>bin\x86\Release\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.2.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL">
       <HintPath>..\packages\Portable.BouncyCastle.1.8.2\lib\net40\BouncyCastle.Crypto.dll</HintPath>
@@ -116,6 +124,7 @@
     <Compile Include="PortFactory\Enums\PrintingStyle.cs" />
     <Compile Include="PortFactory\PortWriter.cs" />
     <Compile Include="Printer.cs" />
+    <Compile Include="PrinterStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
