--- a/EscPosPrinter.Console/app.config
+++ b/EscPosPrinter.Console/app.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -9,4 +14,21 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <log4net>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="%property{LogFileName}.log" />
+      <appendToFile value="true" />
+      <maxSizeRollBackups value="100" />
+      <rollingStyle value="Size" />
+
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date - %message-%newline" />
+      </layout>
+    </appender>
+
+    <logger name="SampleAppender">
+      <level value="DEBUG" />
+      <appender-ref ref="RollingFileAppender" />
+    </logger>
+  </log4net>
 </configuration>
